test/MC/SVE/regression-tests/negative_tests/sve-ld1sb-006.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecS32CLoad1LSSZ
// Offset register Rm cannot be xzr
ld1sb z19.s, p2/z, [x29, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
